almost finished consigne 1

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         
           <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link fw-bolder fs-5 pe-5" aria-current="page" href="./public/pages/consign1.html">Consigne 1</a>
-              <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign2.html">Consigne 2</a>
-              <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign3.html">Consigne 3</a>
+              <a class="nav-link fw-bolder fs-5 pe-5" href="./public/pages/consign1.html" target="_blank">Consigne 1</a>
+              <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign2.html" target="_blank">Consigne 2</a>
+              <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign3.html" target="_blank">Consigne 3</a>
             </div>
           </div>
         </div>
