--- a/public/pages/consign3.html
+++ b/public/pages/consign3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/app.css">
+    <link rel="stylesheet" href="../css/app.css">
     <title>con 3</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 
 
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="../js/con3.js"></script>
 </body>
 </html>
