--- a/public/pages/consign2.html
+++ b/public/pages/consign2.html
@@ -13,15 +13,16 @@
             <input id="task" class="p-1 me-2" type="text" placeholder="Enter your task">
             <button id="send" class="btn btn-darkbrown px-3">Send</button>
         </div>
-        <div class="bg-beige boite d-flex justify-content-center text-center">
+        <div class="bg-beige box-colns d-flex justify-content-center text-center">
             <div id="todo" class="bg-todo colon">
+                <h1>To Do</h1>
                 <!-- at first here les balises <p> & <i> vont etre creer par js -->
             </div>
             <div id="doing" class="bg-doing colon">
-
+                <h1>Doing</h1>
             </div>
             <div id="done" class="bg-done colon">
-
+                <h1>Done</h1>
             </div>
         </div>
     </div>
