--- a/public/pages/consign2.html
+++ b/public/pages/consign2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../css/app.css">
     <title>con 2</title>
 </head>
+
 <body>
     <div class="d-flex flex-column justify-content-center align-items-center mt-3">
         <div class="d-flex justify-content-center ">
@@ -16,7 +18,7 @@
         <div class="bg-beige box-colns d-flex justify-content-center text-center">
             <div id="todo" class="bg-todo colon">
                 <h1>To Do</h1>
-                <!-- at first here les balises <p> & <i> vont etre creer par js -->
+                <!-- at first here les balises <p>, their <i> & select vont etre creer par js -->
             </div>
             <div id="doing" class="bg-doing colon">
                 <h1>Doing</h1>
@@ -33,4 +35,5 @@
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="../js/con2.js"></script>
 </body>
+
 </html>
