--- a/public/pages/consign3.html
+++ b/public/pages/consign3.html
@@ -10,7 +10,7 @@
 <body>
     
     <h5> i need time to look for it, understand it .. then try it <br>
-        i can't get it done yet :(
+        i can't get it done yet sorry :(
     </h5>
 
 
