--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/app.css">
+    <link rel="stylesheet" href="./public/css/mycss.css">
     <link rel="shortcut icon" href="./public/images/todo.PNG" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <title>Document</title>
 </head>
 <body>
@@ -26,12 +27,26 @@
         </div>
       </nav>
 
+        <div class="mt-3 guide">
+          <div class="bg-beige box-colns d-flex justify-content-center text-center">
+              <div class="colon">
+                  <h1>Consigne 1</h1>
+              </div>
+              <div class="colon">
+                  <h1>Consigne 2</h1>
+              </div>
+              <div class="colon">
+                  <h1>Consigne 3</h1>
+              </div>
+          </div>
+      </div>
+
 
 
 
 
 
 <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
