--- a/index.html
+++ b/index.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/app.css">
-    <link rel="stylesheet" href="./public/css/mycss.css">
-    <link rel="shortcut icon" href="./public/images/todo.PNG" type="image/x-icon">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./public/css/app.css">
+  <link rel="stylesheet" href="./public/css/mycss.css">
+  <link rel="shortcut icon" href="./public/images/todo.PNG" type="image/x-icon">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+  <title>Document</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid d-flex justify-content-center align-items-center">
-          <a class="navbar-brand fw-bolder fs-3 text-success ps-4" href="./index.html">
-            <img src="./public/images/todo.PNG" alt="todoLogo" width="70px" class="pe-3">
-            TO-DO List</a>
-        
-          <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link fw-bolder fs-5 pe-5" href="./public/pages/consign1.html" target="_blank">Consigne 1</a>
-              <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign2.html" target="_blank">Consigne 2</a>
-              <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign3.html" target="_blank">Consigne 3</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid d-flex justify-content-center align-items-center">
+      <a class="navbar-brand fw-bolder fs-3 text-success ps-4" href="./index.html">
+        <img src="./public/images/todo.PNG" alt="todoLogo" width="70px" class="pe-3">
+        TO-DO List</a>
+
+      <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link fw-bolder fs-5 pe-5" href="./public/pages/consign1.html">Consigne 1</a>
+          <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign2.html">Consigne 2</a>
+          <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign3.html">Consigne 3</a>
         </div>
-      </nav>
-
-        <div class="mt-3 guide">
-          <div class="bg-beige box-colns d-flex justify-content-center text-center">
-              <div class="colon">
-                  <h1>Consigne 1</h1>
-              </div>
-              <div class="colon">
-                  <h1>Consigne 2</h1>
-              </div>
-              <div class="colon">
-                  <h1>Consigne 3</h1>
-              </div>
-          </div>
       </div>
+    </div>
+  </nav>
+
+  <div class="mt-3 guide">
+    <div class="bg-beige box-colns d-flex justify-content-center text-center">
+      <div class="colon">
+        <a class="nav-link fw-bolder fs-5 pe-5" href="./public/pages/consign1.html"><h1>Consigne 1</h1></a>
+      </div>
+      <div class="colon">
+        <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign2.html"><h1>Consigne 2</h1></a>
+      </div>
+      <div class="colon">
+        <a class="nav-link fw-bolder fs-5 px-5" href="./public/pages/consign3.html"><h1>Consigne 3</h1></a>
+      </div>
+    </div>
+   
+  </div>
 
 
 
 
 
 
-<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<!-- <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <!-- <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
+
 </html>
