--- a/public/pages/consign1.html
+++ b/public/pages/consign1.html
@@ -6,28 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/app.css">
+    <link rel="stylesheet" href="../css/mycss.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <title>con 1</title>
 </head>
 
 <body>
-    <div class="d-flex flex-column justify-content-center align-items-center mt-3">
+    <div>
+        <a href="../../index.html" type="btn" class="nav-link">
+            <div class="back d-flex justify-content-center align-items-center link-beige "><i
+                    class="fa-solid fa-arrow-left"></i></div>
+        </a>
+    </div>
+    <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="d-flex justify-content-center ">
             <input id="task" class="p-1 me-2" type="text" placeholder="Enter your task">
             <button id="send" class="btn btn-darkbrown px-3">Send</button>
         </div>
         <!-- ^ SELECT ------------------------>
         <div class="dropdown mt-5">
-            <a class="btn btn-beige border border-darkbrown dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Select tasks
+            <a class="btn btn-beige border border-darkbrown dropdown-toggle" href="#" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Select tasks
             </a>
             <ul class="dropdown-menu">
-              <li><a id="all_tasks" class="dropdown-item" href="#">All tasks</a></li>
-              <li><a id="all_Vtasks" class="dropdown-item" href="#">Valid tasks</a></li>
-              <li><a id="all_NV" class="dropdown-item" href="#">Non valid tasks</a></li>
+                <li><a id="all_tasks" class="dropdown-item" href="#">All tasks</a></li>
+                <li><a id="all_Vtasks" class="dropdown-item" href="#">Valid tasks</a></li>
+                <li><a id="all_NV" class="dropdown-item" href="#">Non valid tasks</a></li>
             </ul>
-          </div>
+        </div>
         <!-- ^ SELECT end ------------------------>
         <img id="todoT" src="../images/todoTitle.png" alt="todoTitre" srcset="" width="180px" height="60px">
         <div class="bg-beige boite d-flex justify-content-center text-center">
