--- a/public/pages/consign2.html
+++ b/public/pages/consign2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/app.css">
-    <link rel="stylesheet" href="./public/css/mycss.css">
+    <link rel="stylesheet" href="../css/mycss.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+    <div>
+        <a href="../../index.html" type="btn" class="nav-link">
+            <div class="back d-flex justify-content-center align-items-center link-beige "><i
+                    class="fa-solid fa-arrow-left"></i></div>
+        </a>
+    </div>
     <div class="d-flex flex-column justify-content-center align-items-center mt-3">
         <div class="d-flex justify-content-center ">
             <input id="task" class="p-1 me-2" type="text" placeholder="Enter your task">
