--- a/public/pages/consign2.html
+++ b/public/pages/consign2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="../css/mycss.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    
+
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <title>con 2</title>
@@ -21,7 +21,7 @@
                     class="fa-solid fa-arrow-left"></i></div>
         </a>
     </div>
-    <div class="d-flex flex-column justify-content-center align-items-center mt-3">
+    <div class="d-flex flex-column justify-content-center align-items-center ">
         <div class="d-flex justify-content-center ">
             <input id="task" class="p-1 me-2" type="text" placeholder="Enter your task">
             <button id="send" class="btn btn-darkbrown px-3">Send</button>
