--- a/public/pages/consign3.html
+++ b/public/pages/consign3.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="../css/mycss.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <title>con 3</title>
 </head>
@@ -17,13 +19,29 @@
                     class="fa-solid fa-arrow-left"></i></div>
         </a>
     </div>
-    <h5> i need time to look for it, understand it .. then try it <br>
-        i can't get it done yet sorry :(
-    </h5>
+    <div class="d-flex flex-column justify-content-center align-items-center">
+        <div class="d-flex justify-content-center ">
+            <input class="p-1 me-2" type="text" placeholder="Enter your task">
+            <button class="btn btn-warning px-3">Send</button>
+        </div>
+        <div >
+            <div >
+                <h1>To Do</h1>
+                <!-- at first here les balises <p>, their <i> & select vont etre creer par js -->
+            </div>
+            <div >
+                <h1>Doing</h1>
+            </div>
+            <div >
+                <h1>Done</h1>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="../js/con3.js"></script>
-    <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
