--- a/public/pages/consign3.html
+++ b/public/pages/consign3.html
@@ -22,17 +22,17 @@
     <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="d-flex justify-content-center ">
             <input class="p-1 me-2" type="text" placeholder="Enter your task">
-            <button class="btn btn-warning px-3">Send</button>
+            <button class="btn btn-dark px-3">Add</button>
         </div>
-        <div >
-            <div >
+        <div class="divDad box-colns d-flex justify-content-center text-center">
+            <div class="colonKid bg-kid1">
                 <h1>To Do</h1>
                 <!-- at first here les balises <p>, their <i> & select vont etre creer par js -->
             </div>
-            <div >
+            <div class="colonKid bg-kid2">
                 <h1>Doing</h1>
             </div>
-            <div >
+            <div class="colonKid bg-kid3">
                 <h1>Done</h1>
             </div>
         </div>
